--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
               <div class="header">
             <h1>
               <a href="/index.html">
-              <img class="logo" src="/img/logo.png" alt="Philip Dixon">
+              <img class="logo" src="img/logo.png" alt="Philip Dixon">
               </a>
                 Philip Dixon
               </h1>
