Delete blog and change code

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
           <section>
               <div class="header">
             <h1>
+                Philip Dixon<br>
               <a href="/index.html">
               <img class="logo" src="/img/Logo.png" alt="Philip Dixon">
               </a>
-                Philip Dixon
               </h1>
                 <p>"If we teach today as we taught yesterday, we rob our children of tomorrow."</p>
         </div>
