--- a/index.html
+++ b/index.html
@@ -18,16 +18,7 @@
       </section>
       </header>
       <div class="bio">
-        <div class="teaching">
-            <h3>Teaching</h3>
-			<p>Text</p>
-			<p><a href="#">Have a look at some examples of my work.</a></p>
-		  </div>
-		  <div class="technology">
-			<h3>Technology</h3>
-			<p>Text</p>
-			<p><a href="http://mrpdixon.tumblr.com">Visit my blog for more information on technology I use in the classroom.</a></p>
-		  </div>
+        Currently being updated. Check back next week!
 	</div>
       <footer>
           <div class="contact">
