--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       </section>
       </header>
       <div class="bio">
+          <div class="teaching">
         Currently being updated. Check back next week!
 	</div>
+          </div>
       <footer>
           <div class="contact">
               <ul>  
