complete version 1.0 of website

--- a/index.html
+++ b/index.html
@@ -106,14 +106,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Teaching</h2>
                     <p class="lead">Teacher for 4 years, currently working as Head of Physics at a Secondary School in Yorkshire.<br>Dedicated to improving the use of technology within education.<br>Details of my current and previous roles and resposibilities can be found on LinkedIn. </p>
-                     <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                     <a href="https://uk.linkedin.com/in/philiptdixon" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" style="border-radius: 10px;" src="img/teach.jpg" alt="">
                 </div>
             </div>
 
@@ -129,13 +128,13 @@
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">EduTech</h2>
                     <p class="lead">New to Education blogging, but not blogging itself. I'm currently working on releasing reviews, previews and recommendations of ways schools and similar education establishments can move forward with the ever changing world of technology.</p>
+                    <a href="https://medium.com/@PhilipTDixon" class="btn btn-default btn-lg"><i class="fa fa-medium fa-fw"></i> <span class="network-name">Medium</span></a>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/edutech.png" alt="">
                 </div>
             </div>
 
@@ -209,7 +208,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="mailto:hello@philipdixon.com">Contact</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Philip Dixon 2016. All Rights Reserved</p>
